Bug 107130 - [CI][GLK,APL,SKL] igt@drv_selftest@live_objects hangs
Summary: [CI][GLK,APL,SKL] igt@drv_selftest@live_objects hangs
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-05 14:51 UTC by Tomi Sarvela
Modified: 2018-07-10 11:39 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Comment 1 Chris Wilson 2018-07-05 17:49:34 UTC
I'm not sure why the timeouts are picking on these machines and not others. There's no particular sign of stress (oomkiller), and the workload is identical to others. Mysterious, so lets look at how better we can accommodate igt_timeout inside live_objects.
Comment 2 Chris Wilson 2018-07-06 16:30:18 UTC
commit e5d2435bfaeee3f4045e03441d3902c63254b618
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Jul 6 07:53:07 2018 +0100

    drm/i915/selftests: Destroy partial tiling vma after use
    
    As we keep VMA around until the object is destroyed, when testing
    partial tiling we instantiate many, many VMA (as the object is huge
    allowing for many different partial regions). We test elsewhere our
    handling of populating large objects with a full set of VMA and checking
    we can retrieve them afterwards, but in this test we incur the cost of
    flushing all VMA after every GTT write, dramatically slowing down the
    test.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=107130
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Reviewed-by: Matthew Auld <matthew.auld@intel.com>
    Link: https://patchwork.freedesktop.org/patch/msgid/20180706065332.15214-2-chris@chris-wilson.co.uk
Comment 3 Martin Peres 2018-07-10 11:39:08 UTC
(In reply to Chris Wilson from comment #2)
> commit e5d2435bfaeee3f4045e03441d3902c63254b618
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Fri Jul 6 07:53:07 2018 +0100
> 
>     drm/i915/selftests: Destroy partial tiling vma after use
>     
>     As we keep VMA around until the object is destroyed, when testing
>     partial tiling we instantiate many, many VMA (as the object is huge
>     allowing for many different partial regions). We test elsewhere our
>     handling of populating large objects with a full set of VMA and checking
>     we can retrieve them afterwards, but in this test we incur the cost of
>     flushing all VMA after every GTT write, dramatically slowing down the
>     test.
>     
>     References: https://bugs.freedesktop.org/show_bug.cgi?id=107130
>     Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
>     Reviewed-by: Matthew Auld <matthew.auld@intel.com>
>     Link:
> https://patchwork.freedesktop.org/patch/msgid/20180706065332.15214-2-
> chris@chris-wilson.co.uk

Looks like it did the trick. Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.